<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/fondo"
    tools:context=".registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="98dp"
                    android:layout_height="103dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="268dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:text="REGISTRO DE  USUARIOS"
                    android:textColor="#FFF"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <EditText
                android:id="@+id/etRegNombre"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="28dp"
                android:background="#5E2D4F"
                android:ems="10"
                android:hint="Nombre"
                android:inputType="textPersonName"
                android:textColor="#FFF"
                android:textColorHint="#C2A0CE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/etRegDomicilio"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="#5E2D4F"
                android:ems="10"
                android:hint="@string/crearDomicilio"
                android:inputType="textPersonName"
                android:textColor="#FFF"
                android:textColorHint="#C2A0CE" />

            <EditText
                android:id="@+id/etRegCelular"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="#5E2D4F"
                android:ems="10"
                android:hint="@string/crearCelular"
                android:inputType="number"
                android:textColor="#FFF"
                android:textColorHint="#C2A0CE" />

            <EditText
                android:id="@+id/etRegEmail"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="#5E2D4F"
                android:ems="10"
                android:hint="@string/crearEmail"
                android:inputType="textPersonName"
                android:textColor="#FFF"
                android:textColorHint="#C2A0CE" />

            <EditText
                android:id="@+id/etRegNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="#5E2D4F"
                android:ems="10"
                android:hint="@string/crearNombreUsuario"
                android:inputType="textPersonName"
                android:textColor="#FFF"
                android:textColorHint="#C2A0CE" />

            <EditText
                android:id="@+id/etRegContra"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="#5E2D4F"
                android:ems="10"
                android:hint="@string/crearContra"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textColorHint="#C2A0CE" />

            <EditText
                android:id="@+id/etRegRepContra"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="#5E2D4F"
                android:ems="10"
                android:hint="@string/crearRepiteContra"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textColorHint="#C2A0CE" />

            <Button
                android:id="@+id/btnRegUsuario"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_registro"
                android:text="@string/crearbtn"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>